Set correct semver version to make npm not freak out

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mantra-core",
-  "version": "1.7.0_1",
+  "version": "1.7.1",
   "description": "Core API for Mantra",
   "repository": {
     "type": "git",
