--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "prepublish": ". ./scripts/prepublish.sh",
-    "preinstall": ". ./scripts/prepublish.sh",
+    "preinstall": "npm i && . ./scripts/prepublish.sh",
     "lint": "eslint ./src",
     "lintfix": "eslint ./src --fix",
     "testonly": "mocha $npm_package_options_mocha",
