--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "prepublish": ". ./scripts/prepublish.sh",
-    "preinstall": "pwd; . ./scripts/prepublish.sh",
+    "preinstall": ". ./scripts/prepublish.sh",
     "lint": "eslint ./src",
     "lintfix": "eslint ./src --fix",
     "testonly": "mocha $npm_package_options_mocha",
@@ -26,15 +26,15 @@
     "eslint": "1.7.x",
     "babel-eslint": "4.x.x",
     "eslint-plugin-babel": "2.x.x",
+    "react": "^0.14.6"
+  },
+  "dependencies": {
     "babel-cli": "6.x.x",
     "babel-core": "6.x.x",
     "babel-polyfill": "6.x.x",
     "babel-preset-es2015": "6.x.x",
     "babel-preset-stage-2": "6.x.x",
     "babel-plugin-transform-runtime": "6.x.x",
-    "react": "^0.14.6"
-  },
-  "dependencies": {
     "babel-runtime": "6.x.x",
     "react-komposer": "^1.9.0",
     "react-simple-di": "^1.2.0"
