--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
     "eslint": "1.7.x",
     "babel-eslint": "4.x.x",
     "eslint-plugin-babel": "2.x.x",
-    "react": "^0.14.6"
-  },
-  "dependencies": {
     "babel-cli": "6.x.x",
     "babel-core": "6.x.x",
     "babel-polyfill": "6.x.x",
     "babel-preset-es2015": "6.x.x",
     "babel-preset-stage-2": "6.x.x",
     "babel-plugin-transform-runtime": "6.x.x",
+    "react": "^0.14.6"
+  },
+  "dependencies": {
+    "babel": "6.x.x",
     "babel-runtime": "6.x.x",
     "react-komposer": "^1.9.0",
     "react-simple-di": "^1.2.0"
